<resources>
    <string name="app_name">Ledo</string>
    <string name="welcome">Welcome</string>
    <string name="text_details">Lorem ipsum dolor sit amet, \n consectetur adipiscing  </string>
    <string name="get_started">Get Started</string>
    <string name="log_in"><u>Log In</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="leader_board">Leaderboard</string>
    <string name="self_awareness">Self-awareness</string>
    <string name="mind_mapping">Mind-Mapping</string>
    <string name="personal_branding">Personal-Branding</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login_screen">Login Screen</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="send">Send</string>
    <string name="yourself_journey">Yourself Journey</string>
</resources>
