<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/artwork"
        android:layout_margin="16dp"
        android:id="@+id/artworkImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:id="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@id/artworkImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_details"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_margin="20sp"
        android:gravity="center"
        android:id="@+id/details"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/get_started_shape"
        android:text="@string/get_started"
        android:textColor="@color/getStartedTextColor"
        android:textSize="20sp"
        android:padding="16dp"
        android:elevation="20dp"
        android:id="@+id/getStarted"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details"
        />


</androidx.constraintlayout.widget.ConstraintLayout>