<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home">
<FrameLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2fcfa"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/line"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_marginEnd="215dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            android:src="@mipmap/line"
            app:layout_constraintTop_toBottomOf="@id/self_awarness"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/self_awarness"
            android:layout_width="155dp"
            android:layout_height="100dp"
            android:layout_marginStart="200dp"
            android:scaleType="fitXY"
            android:src="@mipmap/self_awarness_icon"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintEnd_toEndOf="@+id/line"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@id/mind" />

        <ImageView
            android:id="@+id/clouds"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:scaleType="fitXY"
            android:src="@mipmap/clouds"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintEnd_toStartOf="@id/self_awarness"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/self_awarness" />

        <ImageView
            android:id="@+id/mind"
            android:layout_width="230dp"
            android:layout_height="130dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="100dp"
            android:scaleType="fitXY"
            android:src="@mipmap/mind_icon"
            app:layout_constraintBottom_toTopOf="@+id/clouds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maountains" />

        <ImageView
            android:id="@+id/maountains"
            android:layout_width="280dp"
            android:layout_height="190dp"
            android:scaleType="fitXY"
            android:src="@mipmap/maountains"
            app:layout_constraintBottom_toTopOf="@+id/mind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />

        <ImageView
            android:id="@+id/line3"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginEnd="190dp"
            android:layout_marginTop="35dp"
            android:src="@mipmap/line_3"
            app:layout_constraintBottom_toBottomOf="@id/mind"
            app:layout_constraintEnd_toEndOf="@+id/mind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/line2" />

        <ImageView
            android:id="@+id/line2"
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:src="@mipmap/line_2"
            app:layout_constraintBottom_toTopOf="@+id/line3"
            app:layout_constraintEnd_toStartOf="@+id/maountains"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/maountains" />

        <ImageView
            android:id="@+id/tree"
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:src="@mipmap/tree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/self_awarness"
            app:layout_constraintTop_toBottomOf="@+id/maountains" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="200dp"
            android:scaleType="fitXY"
            android:src="@mipmap/line_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tree"
            app:layout_constraintStart_toEndOf="@+id/self_awarness"
            app:layout_constraintTop_toTopOf="@+id/self_awarness" />

        <ImageView
            android:id="@+id/lines"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:src="@mipmap/lines"
            app:layout_constraintBottom_toTopOf="@+id/tree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mind"
            app:layout_constraintTop_toBottomOf="@+id/maountains" />

        <ImageView
            android:layout_width="145dp"
            android:layout_height="110dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="220dp"
            android:scaleType="fitXY"
            android:src="@mipmap/line_4"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mind"
            app:layout_constraintTop_toTopOf="@+id/mind" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_mind"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="#99FFFFFF"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/self_awarness"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/mind">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mind_mapping"
                android:textColor="@color/courseNameTextColor"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_self"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/self_awarness"
            app:layout_constraintTop_toTopOf="@+id/self_awarness">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/self_awareness"
                android:textColor="@color/courseNameTextColor"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_personal"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="125dp"
            app:cardBackgroundColor="#99ffffff"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line2"
            app:layout_constraintTop_toTopOf="@+id/maountains">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/personal_branding"
                android:textColor="@color/courseNameTextColor"
                android:textSize="15sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@id/maountains"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="30dp"
                android:text="Yourself Journey"
                android:textColor="#1f314a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="70dp"
                android:text="30%"
                android:textColor="#22d0c4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="Rank : 3rd"
                android:textColor="#1f314a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/man" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/icon_4" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:src="@mipmap/icon_2" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="90dp"
                android:src="@mipmap/icon" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</ScrollView>